--- a/assignment_3/styles.css
+++ b/assignment_3/styles.css
@@ -29,15 +29,18 @@ div
 
 /* FIRST ROW : FLOATS; */
 .a1 {
+	float: right;
 }
 
 .b1 {
 }
 
 .c1 {
+	float: right;
 }
 
 .d1 {
+	float: left;
 }
 
 /* SECOND ROW : DISPLAY */
@@ -46,12 +49,16 @@ div
 }
 
 .b2 {
+	display: none;
 }
 
 .c2 {
+	display: inline;
 }
 
 .d2 {
+	display: block;
+
 }
 
 /* THIRD ROW : POSITION */
@@ -60,10 +67,19 @@ div
 }
 
 .b3 {
+	top: -51px;
+    left: 17px;
+    position: relative;
 }
 
 .c3 {
+	position: fixed;
+    right: 0;
+    top: 504px;
 }
 
 .d3 {
+	position: relative;
+    top: -163px;
+    left: 43px;
 }
